fixed an overflow issue in on the user facilities cards at certain resolutions

--- a/assets/styles/components/_user-facilities.scss
+++ b/assets/styles/components/_user-facilities.scss
@@ -8,7 +8,7 @@ article{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    @media (max-width: 720px) {
+    @media (max-width: 1130px) {
         flex-direction: column;
         justify-content: center;
     }
@@ -21,7 +21,7 @@ article{
         padding: 4rem;
         width: 30%;
 
-        @media (max-width: 720px){
+        @media (max-width: 1130px){
             width: 70%;
         }
 
